--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,101 @@
 }
 body {
   font-family: "Bellefair", serif;
-  margin: 0;
-  padding: 0;
+  margin-left: 50px;
+  margin-right: 50px;
+  margin-top: 0;
+  margin-bottom: 0;
   box-sizing: border-box;
+  background-color: white;
+}
+.app {
+  background-image: url(./assets/home/background-home-desktop.jpg);
+  background-repeat: no-repeat;
+  height: 100vh;
+  width: 100%;
+}
+.nav-bar {
+  width: auto;
+  display: flex;
+  color: white;
+  height: 100px;
+  align-items: center;
+  justify-content: space-between;
+  padding: 5px 1rem 5px 4px;
+}
+.nav-bar > .nav-menu {
+  background-color: rgba(225, 225, 225, 0.2);
+  backdrop-filter: blur(10px);
+  height: auto;
+  width: 48%;
+}
+.nav-bar ul {
+  display: flex;
+  gap: 2rem;
+  list-style-type: none;
+  padding: 10px;
+  font-size: 14px;
+  justify-content: center;
+}
+tr {
+  border: 1px solid var(--clr-accent);
+  opacity: 20%;
+  width: 35%;
+  position: absolute;
+  left: 300px;
+  z-index: 10;
+}
+.hamburger {
+  display: none;
+  cursor: pointer;
+}
+
+li {
+  cursor: pointer;
+}
+@media all and (max-width: 1360px) {
+  tr {
+    width: 25%;
+  }
+}
+@media all and (max-width: 1100px) {
+  tr {
+    display: none;
+  }
+}
+@media all and (max-width: 800px) {
+  .nav-bar {
+    margin: 0;
+    padding: 0;
+    height: auto;
+  }
+
+  li {
+    font-size: 8px;
+  }
+}
+@media all and (max-width: 540px) {
+  body {
+    margin: 0;
+    padding: 0;
+  }
+  .hamburger {
+    display: block;
+    z-index: 10;
+  }
+  .nav-bar {
+    padding-top: 8px;
+    padding-right: 15px;
+    align-items: start;
+  }
+  .nav-menu {
+    position: absolute;
+    right: -250px;
+    bottom: 0;
+    top: 0;
+    height: auto;
+  }
+  ul {
+    flex-direction: column;
+  }
 }
