--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,7 @@ body {
 tr {
   border: 1px solid var(--clr-accent);
   width: 500px;
-  opacity: 60%;
+  opacity: 50%;
   z-index: 10;
   transform: translate(25%);
 }
@@ -63,4 +63,93 @@ tr {
 }
 .nav-list > li > .li-num {
   font-weight: bolder;
+}
+.home {
+  height: 550px;
+  display: flex;
+  align-items: end;
+  justify-content: center;
+  gap: 200px;
+}
+.space-question-div {
+  width: 450px;
+  height: 382px;
+  font-size: 27px;
+}
+.space-question {
+  color: var(--clr-secondary);
+  font-family: Georgia, "Times New Roman", Times, serif;
+}
+.space-word {
+  margin-top: 20px;
+  margin-bottom: 25px;
+
+  color: white;
+  font-size: 130px;
+  font-family: Georgia, "Times New Roman", Times, serif;
+}
+.space-paragraph {
+  color: var(--clr-secondary);
+}
+.explore-button-div {
+  height: 274px;
+  width: 274px;
+}
+.explore {
+  background: white;
+  height: 100%;
+  width: 100%;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: black;
+  font-size: 40px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+.explore:hover {
+  box-shadow: 0 0 0 40px rgba(255, 255, 255, 0.3);
+}
+
+@media all and (max-width: 1340px) {
+  tr {
+    display: none;
+  }
+}
+@media all and (max-width: 1100px) {
+  .space {
+    padding: 0;
+    background-image: url(./assets/home/background-home-tablet.jpg);
+  }
+  .nav-bar {
+    height: 96px;
+  }
+  .nav-menu {
+    backdrop-filter: blur(2px);
+    background-color: rgba(255, 255, 255, 0.1);
+    width: 60%;
+  }
+  .nav-list {
+    gap: 1.5rem;
+    font-size: 14px;
+  }
+  .home {
+    gap: 0;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 2rem;
+  }
+  .space-question-div {
+    margin-top: 80px;
+  }
+  .explore-button-div {
+    height: 242px;
+    width: 242px;
+    position: absolute;
+    bottom: 30px;
+  }
+}
+@media all and (max-width: 700px) {
 }
