--- a/src/App.css
+++ b/src/App.css
@@ -212,6 +212,9 @@ tr {
   display: flex;
   justify-content: center;
 }
+.img-hr {
+  display: none;
+}
 .meet-your-crew {
   font-size: 28px;
   margin-left: 20px;
@@ -383,16 +386,156 @@ h6 {
     padding: 2rem;
   }
   .space-question-div {
-    margin-top: 80px;
+    font-size: 15px;
+    text-align: center;
+    margin-top: -90px;
+  }
+
+  .space-word {
+    font-size: 50px;
+    text-align: center;
+    font-size: 70px;
+  }
+  .space-paragraph {
+    font-size: 22px;
   }
   .explore-button-div {
-    height: 202px;
-    width: 202px;
+    height: 150px;
+    width: 150px;
     position: absolute;
 
     bottom: 30px;
   }
+  .explore {
+    padding: 50px;
+    font-size: 30px;
+  }
+  .pick-destination-div {
+    font-size: 18px;
+    margin-top: -20px;
+    position: absolute;
+    left: 0;
+  }
+  .planet-capsule {
+    flex-direction: column;
+  }
+  .planet-img-div {
+    height: 250px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+  .planet-selection-div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .planet-name {
+    font-size: 60px;
+    text-align: center;
+    margin-top: -10px;
+  }
+  .planet-paragraph {
+    margin-bottom: 20px;
+    margin-top: 15px;
+    font-size: 15px;
+  }
+  .planet-hr {
+    width: 100%;
+  }
+  .planet-information {
+    margin-bottom: 10px;
+  }
+  .distance-span {
+    font-size: 14px;
+  }
+  .planet {
+    font-size: 16px;
+  }
+  .arrival-data-span {
+    font-size: 20px;
+    display: inline;
+  }
+  .arrival-span {
+    font-size: 14px;
+    white-space: nowrap;
+  }
+  .distance-span {
+    font-size: 14px;
+    width: 79px;
+  }
+  .crew-page {
+    padding: 0;
+    display: grid;
+  }
+  .main-content {
+    display: flex;
+    flex-direction: column;
+  }
+  .crew-information-panel {
+    width: 100%;
+    max-width: 100%;
+    height: fit-content;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+  .meet-your-crew {
+    position: absolute;
+    left: 10px;
+    width: 100%;
+
+    top: 110px;
+    font-size: 18px;
+  }
+  .crew-image-panel {
+    height: stretch;
+    width: 100%;
+    max-width: 100%;
+    max-height: 100%;
+  }
+  .crew-image-div {
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 250px;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+  }
+  .commander-info {
+    margin: 0;
+    width: 100%;
+    margin-top: 50px;
+  }
+  .crew-title {
+    font-size: 25px;
+    text-align: center;
+  }
+  .crew-name {
+    text-align: center;
+    font-size: 32px;
+    margin-bottom: 15px;
+    margin-top: 10px;
+  }
+  .crew-paragraph {
+    text-align: center;
+  }
+  .crew-selection-div {
+    position: static;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+  }
+  .commander-info {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
+
 @media all and (max-width: 700px) {
   html,
   body {
@@ -447,14 +590,169 @@ h6 {
   }
   .space-question-div {
     font-size: 19px;
+    margin-top: -5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
   .space-word {
     margin-top: 10px;
     margin-bottom: 15px;
-    font-size: 100px;
+    font-size: 80px;
+  }
+  .space-paragraph {
+    font-size: 20px;
+    max-width: 80%;
+    text-align: center;
   }
   .explore-button-div {
     height: 190px;
     width: 190px;
+  }
+  .pick-destination-div {
+    font-size: 15px;
+    text-align: center;
+    width: 100%;
+    margin-bottom: 40px;
+    position: absolute;
+    top: 100px;
+  }
+  .planet-capsule {
+    flex-direction: column;
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+  .planet-img-div {
+    height: 230px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+  .planet-selection-div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .planet-name {
+    font-size: 60px;
+    text-align: center;
+    margin-top: -10px;
+  }
+  .planet-paragraph {
+    margin-bottom: 20px;
+    margin-top: 15px;
+    font-size: 15px;
+    max-width: 80%;
+  }
+  .planet-hr {
+    width: 80%;
+  }
+  .planet-information {
+    margin-bottom: 10px;
+  }
+  .distance-span {
+    font-size: 14px;
+  }
+  .planet {
+    font-size: 16px;
+  }
+  .arrival-data-span {
+    font-size: 20px;
+    display: inline;
+  }
+  .arrival-span {
+    font-size: 14px;
+    white-space: nowrap;
+  }
+  .distance-span {
+    font-size: 14px;
+    width: 79px;
+  }
+  .crew-page {
+    padding: 0;
+    display: flex;
+    flex-direction: column-reverse;
+  }
+  .main-content {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+  .crew-information-panel {
+    width: 100%;
+    max-width: 100%;
+    height: fit-content;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 1rem;
+  }
+  .meet-your-crew {
+    position: absolute;
+    width: 100%;
+    text-align: center;
+    top: 90px;
+    font-size: 18px;
+    margin: 0;
+  }
+
+  .img-hr {
+    display: block;
+    margin-right: 10%;
+    margin-left: 10%;
+    border: 1px solid rgba(255, 255, 255, 0.2);
+  }
+
+  .crew-image-div {
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 250px;
+    width: 100%;
+    position: static;
+    margin-top: -50px;
+  }
+  .commander-info {
+    margin: 0;
+    width: 100%;
+  }
+  .crew-title {
+    font-size: 20px;
+    text-align: center;
+  }
+  .crew-name {
+    text-align: center;
+    font-size: 27px;
+    margin-bottom: 15px;
+    margin-top: 10px;
+  }
+  .crew-paragraph {
+    text-align: center;
+    font-size: 18px;
+  }
+  .crew-selection-div {
+    position: static;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    margin-top: 8px;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    padding-top: 5px;
+    padding-bottom: 15px;
+    gap: 2rem;
+  }
+  .crew-selection-panel {
+    display: flex;
+    flex-direction: column-reverse;
+    margin-bottom: 15px;
+    width: 100%;
+  }
+  .selectionPoint {
+    width: 12px;
+    height: 12px;
+    margin: 0;
   }
 }
